# jrc_ws

./: .gitignore  README.md  run_ur_ee.sh
agv_server/: install_dep_for_agv.sh
agv_server/map/: smooth_test_4.yaml
agv_server/move_forward/: CMakeLists.txt  package.xml
agv_server/move_forward/src/: jrc_move_client.cpp  jrc_move_server.cpp
agv_server/velocity_smooth/: CMakeLists.txt  jrc_agv_amcl.sh
agv_server/velocity_smooth/src/: velocity_smooth.cpp  velocity_smooth_client.cpp  velocity_smooth_client_2.cpp
jrc_urscript/: .gitignore  run_ur_ee.sh
jrc_urscript/src/: Untitled Document
jrc_urscript/src/get_range/: CMakeLists.txt  package.xml  range
jrc_urscript/src/get_range/src/: get_range_node.cpp
jrc_urscript/src/jrc_srvs/: CMakeLists.txt
jrc_urscript/src/jrc_srvs/srv/: call_grasp_state.srv
jrc_urscript/src/msg_package/srv/: grasp.srv
jrc_urscript/src/script_test/: CMakeLists.txt  package.xml
jrc_urscript/src/script_test/src/: script_test_node.cpp
jrc_urscript/src/test_main/src/: test_main_node.cpp
jrc_urscript/src/universal_robot/ur_description/launch/: real_display.launch  sim_display.launch
jrc_urscript/src/universal_robot/ur_description/urdf/: ur10_robot_huojia.urdf  ur3_robot.urdf
jrc_urscript/src/universal_robot/ur_msgs/: CMakeLists.txt
jrc_urscript/src/universal_robot/ur_msgs/msg/: trajectory.msg
jrc_urscript/src/universal_robot/ur_msgs/srv/: Multi_JointPosition.srv  Single_JointPosition.srv
jrc_urscript/src/ur_modern_driver/launch/: ur10_bringup.launch
jrc_urscript/src/ur_modern_driver/src/: ur_realtime_communication.cpp  ur_ros_wrapper.cpp
jrc_urscript/src/ur_pick_srv_v3/: CMakeLists.txt  package.xml
jrc_urscript/src/ur_pick_srv_v3/src/: ur_pick_srv.cpp  ur_pick_srv.h
jrc_ws/: data_Vx_Vy_w.txt  data_vx_vy_w.txt  data_x_y_theta.txt  install_camera_driver.sh  install_dep_for_all.sh
jrc_ws/devel/: .catkin  .rosinstall  setup.sh
jrc_ws/devel/include/jrc_srvs/: call_grasp.h  call_graspRequest.h  call_graspResponse.h  call_twist.h  call_twistRequest.h  call_twistResponse.h  grasp.h  graspRequest.h  graspResponse.h  pose.h  poseRequest.h  poseResponse.h  reco.h  recoRequest.h  recoResponse.h  rgbd.h  rgbdRequest.h  rgbdResponse.h
jrc_ws/devel/include/ur_msgs/: Analog.h  Digital.h  IOStates.h  MasterboardDataMsg.h  RobotStateRTMsg.h  SetIORequest.h  SetIOResponse.h  SetPayloadRequest.h  SetPayloadResponse.h  ToolDataMsg.h
jrc_ws/devel/lib/camera_driver/: realsense2_driver  realsense2_server
jrc_ws/devel/lib/jrc_main/: jrc_main_node
jrc_ws/devel/lib/pkgconfig/: camera_driver.pc  jrc_main.pc  jrc_srvs.pc  pose_server.pc  ur10_moveit_config.pc  ur3_moveit_config.pc  ur5_moveit_config.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  ur_ee_server.pc  ur_gazebo.pc  ur_kinematics.pc  ur_msgs.pc
jrc_ws/devel/lib/pose_server/: pose_server_node
jrc_ws/devel/lib/ur_ee_server/: ur_ee_server_node
jrc_ws/devel/share/camera_driver/cmake/: camera_driverConfig.cmake
jrc_ws/devel/share/jrc_main/cmake/: jrc_mainConfig.cmake
jrc_ws/devel/share/jrc_srvs/cmake/: jrc_srvs-msg-paths.cmake  jrc_srvsConfig.cmake
jrc_ws/devel/share/pose_server/cmake/: pose_serverConfig.cmake
jrc_ws/devel/share/ur10_moveit_config/cmake/: ur10_moveit_configConfig.cmake
jrc_ws/devel/share/ur3_moveit_config/cmake/: ur3_moveit_configConfig.cmake
jrc_ws/devel/share/ur5_moveit_config/cmake/: ur5_moveit_configConfig.cmake
jrc_ws/devel/share/ur_bringup/cmake/: ur_bringupConfig.cmake
jrc_ws/devel/share/ur_description/cmake/: ur_descriptionConfig.cmake
jrc_ws/devel/share/ur_driver/cmake/: ur_driverConfig.cmake
jrc_ws/devel/share/ur_ee_server/cmake/: ur_ee_serverConfig.cmake
jrc_ws/devel/share/ur_gazebo/cmake/: ur_gazeboConfig.cmake
jrc_ws/src/agv_server/velocity_smooth/: CMakeLists.txt  jrc_agv_amcl.sh  package.xml
jrc_ws/src/camera_driver/: CMakeLists.txt
jrc_ws/src/camera_driver/src/: kinect_driver.cpp  kinect_server.cpp
jrc_ws/src/detect_server/: CMakeLists.txt  package.xml
jrc_ws/src/detect_server/script/: ssd_main.py  ssd_main2.py
jrc_ws/src/detect_server/ssd_model/: deploy.prototxt  labelmap.prototxt
jrc_ws/src/jrc_main/: CMakeLists.txt  package.xml
jrc_ws/src/jrc_main/src/: AGV.cpp  jrc_main.cpp  jrc_main_single_grasp.cpp  jrc_main_tmp.cpp
jrc_ws/src/jrc_srvs/: CMakeLists.txt  package.xml
jrc_ws/src/jrc_srvs/srv/: bbox_msgs.srv  grasp.srv  obj_6d.srv
jrc_ws/src/pose_server/: CMakeLists.txt  test.ply
jrc_ws/src/pose_server/include/pose_server/: object6D.hpp  ppf.hpp  utils.hpp
jrc_ws/src/pose_server/model/: 1.ply  10.ply  11.ply  12.ply  14.ply  15.ply  16.ply  2.ply  3.ply  4.ply  5.ply  6.ply  7.ply  8.ply  9.ply
jrc_ws/src/pose_server/src/: center_normal.cpp  hash_int.cpp  main.cpp  pose_server.cpp  ppf.cpp
jrc_ws/src/python_project/: start_node.py
jrc_ws/src/ur_ee_server/jrc03/: jrc03.ino
jrc_ws/src/ur_ee_server/src/: ur_ee_server.cpp
motion_planing_ws/ur_server/moveit/: graph_up_left.xml
motion_planing_ws/ur_server/moveit/ompl-release-release-kinetic-ompl/: CMakeLists.txt
motion_planning/moveit_ws/: graph_desk_middle.xml  graph_desk_right.xml  graph_down_left.xml  graph_up_middle.xml  graph_up_right.xml
src/camera_driver/: CMakeLists.txt  package.xml
src/camera_driver/src/: realsense2_server.cpp
src/grasp_srv/: CMakeLists.txt  package.xml
src/grasp_srv/srv/: call_grasp.srv
src/jrc_main/: CMakeLists.txt
src/jrc_main/include/: AGV.h
src/jrc_main/src/: jrc_main.cpp
src/jrc_srvs/: CMakeLists.txt
src/jrc_srvs/srv/: pose.srv
src/pose_server/: CMakeLists.txt  package.xml
src/twist_srv/: CMakeLists.txt  package.xml
src/universal_robot/ur_msgs/: CMakeLists.txt
src/ur_ee_server/: CMakeLists.txt  package.xml
src/ur_ee_server/src/: ur_ee_server.cpp
src/ur_ee_service/: CMakeLists.txt  package.xml
src/ur_ee_service/src/: ur_ee_service.cpp
src/ur_server/motion_planning/ur_server/: CMakeLists.txt  package.xml
src/ur_server/moveit/: graph_desk_left.xml  graph_down_middle.xml  graph_down_right.xml
src/ur_server/moveit/moveit-kinetic-devel/: setup
(+85 files in other folders)
