<?xml version="1.0"?>
<package>
  <name>ur_ee_service</name>
  <version>0.0.0</version>
  <description>ur_ee_service</description>

  <author email="null@null.null">null null</author>

  <maintainer email="null@null.null">null null</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
<build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>serial</build_depend>

  <run_depend>std_msgs</run_depend>
<run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>serial</run_depend>

</package>
